--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.3",
     "express": "^4.17.1",
+    "ramda": "^0.27.1",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/ramda": "^0.27.54",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8"
