--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node build/index.js",
+    "start": "NODE_ENV=production node build/index.js",
     "test": "jest",
     "dev": "tsnd src/index.ts"
   },
